--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/next": "^1.4.9",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.12.2",
     "jsonwebtoken": "^9.0.2",
