--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@netlify/next": "^1.4.9",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.12.2",
     "jsonwebtoken": "^9.0.2",
@@ -23,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs": "^5.11.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.2"
   }
