--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
-MONGODB_URI="mongodb://127.0.0.1:27017/RealBlog"
+MONGODB_URI="mongodb+srv://SAHIB:SAHIB123@cluster0.ndttf1r.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+"
 JWT_SECRET_KEY=ANYRANDOMTHINGFORJWTTOKEN
